--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Welcome to Javascript</h1>
-    <script src"main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
