--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   </head>
   <body>
     <h1>Welcome to Javascript</h1>
+    <p>Please enter a number to fizzbuzz</p>
+
+    <input type="text" id="fizz-num" />
+    <input type="submit" value="Fizz Buzz!">
+    <h3>Results</h3>
+
+    <div id="results">
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
