fizzbuzz function wired to button.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <p>Please enter a number to fizzbuzz</p>
 
     <input type="text" id="fizz-num" />
-    <input type="submit" value="Fizz Buzz!">
+    <input type="submit" id="submit-button" value="Fizz Buzz!">
     <h3>Results</h3>
 
     <div id="results">
